2017-07-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/gen.c: fix bug #2486 (frame pointer offset wrong)
	* src/z80/peeph-z80.def,
	* src/z80/peeph-r2k.def,
	* src/z80/peeph-tlcs90.def: fix unsafe rules exposed by fixing #2486
	* sdas/asrab/rabmch.c: fix encoding of ld (n+sp),hl instruction

2017-07-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Speed up register allocator.
	* src/stm8/gen.c:
	  Spped up code generation a little bit.

2017-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Speed up register allocator a little bit.

2017-07-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix an issue similar to bug #2633.
	* src/SDCCralloc.hpp,
	  src/stm8/ralloc2.cc:
	  Speed up register allocator a bit.

2017-07-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix bug #2633.

2017-07-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/loop.c:
	  Improve narrowing of loop counters.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve writing of constants to bit-fields.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.c:
	  Better code for operations on 8-bit global variables.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve code generation for wide read through pointer.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Implement narrowing of loop counters, RFE #530.
	* src/stm8/gen.c,
	  support/regression/tests/bug-2630.c:
	  Fix bug #2630.

2017-07-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (isInitiallyTrue),
	* src/SDCCerr.c (setWarningDisabledState),
	* src/SDCCerr.h: fix bugs #2552 & #2614
	* src/SDCCast.c (decorateType): fix bug #2550

2017-07-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Improve narrowing of multiplications.
